--- a/dayiapp/app/src/main/res/values/styles.xml
+++ b/dayiapp/app/src/main/res/values/styles.xml
@@ -6,17 +6,12 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-    </style>
-
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
-
     <!--div title样式-->
     <style name="divTitleStyle">
         <item name="android:layout_width">wrap_content</item>
@@ -25,6 +20,12 @@
         <item name="android:textColor">@color/text_black</item>
         <item name="android:textSize">@dimen/font_size15</item>
         <item name="android:background">@drawable/view_click_background</item>
+    </style>
+
+    <style name="AppTheme.NoActionBar" parent="AppTheme">
+        <item name="windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowBackground">@mipmap/splash_bg</item>
     </style>
 
 </resources>
