--- a/dayiapp/app/src/main/res/values/colors.xml
+++ b/dayiapp/app/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="app_bg">#0099cc</color>
+
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
@@ -13,4 +15,6 @@
     <color name="white">#ffffff</color>
 
     <color name="pressed">#ebebeb</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
