--- a/dayiapp/app/src/main/res/values/colors.xml
+++ b/dayiapp/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="app_bg">#0099cc</color>
+    <!--<color name="app_bg">#0099cc</color>-->
+    <color name="app_bg">#12B7F5</color>
 
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
@@ -17,4 +18,12 @@
     <color name="pressed">#ebebeb</color>
 
     <color name="black_overlay">#66000000</color>
+
+
+    <color name="color_tab_1">#455C65</color>
+    <color name="color_tab_2">#00886A</color>
+    <color name="color_tab_3">#8B6B62</color>
+    <color name="color_tab_4">#6C4A42</color>
+    <color name="color_tab_5">#F63D2B</color>
+
 </resources>
