--- a/dayiapp/app/src/main/res/values/colors.xml
+++ b/dayiapp/app/src/main/res/values/colors.xml
@@ -26,4 +26,17 @@
     <color name="color_tab_4">#6C4A42</color>
     <color name="color_tab_5">#F63D2B</color>
 
+    <color name="white_dark">#f3f3f3</color>
+    <color name="gray_light">#cccccc</color>
+    <color name="gray">#777</color>
+    <color name="gray_dark">#383838</color>
+    <color name="green_light">#8e9ea4</color>
+    <color name="green_dark">#1e3e4a</color>
+    <color name="night_mask">#90000000</color>
+
+    <color name="sky_background">#228FC1</color>
+
+
+
+
 </resources>
