--- a/dayiapp/app/src/main/res/layout/fragment_main.xml
+++ b/dayiapp/app/src/main/res/layout/fragment_main.xml
@@ -1,16 +1,32 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context="com.dayi.app.MainActivity$PlaceholderFragment">
+    android:background="@color/white">
 
-    <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+
+    <com.dayi.app.widget.pullRefreshView.PullToRefreshView
+        android:id="@+id/pull_to_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.extras.com.pullToRefresh.recyclerView.AutoLoadMoreRecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"/>
+
+    </com.dayi.app.widget.pullRefreshView.PullToRefreshView>
+
+
+    <!--<com.extras.com.pullToRefresh.PtrClassicFrameLayout-->
+        <!--android:id="@+id/ptrFrameLayout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
+
+        <!--<com.extras.com.pullToRefresh.recyclerView.AutoLoadMoreRecyclerView-->
+            <!--android:id="@+id/recyclerView"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"/>-->
+    <!--</com.extras.com.pullToRefresh.PtrClassicFrameLayout>-->
 
 </RelativeLayout>
