--- a/dayiapp/app/src/main/res/values/styles.xml
+++ b/dayiapp/app/src/main/res/values/styles.xml
@@ -28,4 +28,35 @@
         <item name="android:windowBackground">@mipmap/splash_bg</item>
     </style>
 
+
+
+    <!-- 日间模式 -->
+    <style name="AppTheme.day" parent="AppTheme">
+        <item name="containerBackground">@color/white_dark</item>
+        <item name="titleColor">@color/gray_dark</item>
+        <item name="textColor">@color/gray</item>
+        <!--<item name="selectorBtn">@drawable/navigator_list_item_day</item>-->
+        <!--<item name="selectorListItem">@drawable/list_item_day</item>-->
+    </style>
+    <!-- 夜间模式 -->
+    <style name="AppTheme.night" parent="AppTheme">
+        <item name="containerBackground">@color/green_dark</item>
+        <item name="titleColor">@color/white_dark</item>
+        <item name="textColor">@color/green_light</item>
+        <!--<item name="selectorBtn">@drawable/navigator_list_item_night</item>-->
+        <!--<item name="selectorListItem">@drawable/list_item_night</item>-->
+    </style>
+
+
+    <style name="cart_dialog"
+           parent="@android:style/Theme.Holo.Light.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimAmount">0.6</item>
+    </style>
 </resources>
