--- a/dayiapp/app/src/main/res/layout/fragment_main.xml
+++ b/dayiapp/app/src/main/res/layout/fragment_main.xml
@@ -4,7 +4,7 @@
     android:background="@color/white">
 
 
-    <com.dayi.app.widget.pullRefreshView.PullToRefreshView
+    <com.dayi.app.widget.refreshView.PullToRefreshView
         android:id="@+id/pull_to_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:background="@color/white"/>
 
-    </com.dayi.app.widget.pullRefreshView.PullToRefreshView>
+    </com.dayi.app.widget.refreshView.PullToRefreshView>
 
 
     <!--<com.extras.com.pullToRefresh.PtrClassicFrameLayout-->
